fix the z-index of bootstrap-select

--- a/app/assets/stylesheets/components/misc.css.scss
+++ b/app/assets/stylesheets/components/misc.css.scss
@@ -123,6 +123,10 @@ img.lazy {
   width: auto;
 }
 
+.bootstrap-select.btn-group .dropdown-menu {
+  z-index: $zindex_selectpicker;
+}
+
 /* fucking baidu analystics */
 a[href^='http://tongji.baidu.com'] {
   display: none;
